web-apps/jaejadle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaejadle
  labels:
    app: jaejadle
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: jaejadle
