web-apps/jaejadle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaejadle-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jaejadle.kro.kr
    secretName: jaejadle-tls
  rules:
  - host: jaejadle.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaejadle
            port:
              number: 80
